<resources>
    <string name="app_name">Что ты выберешь?</string>
    <string name="choose">Выбирать</string>
    <string name="statistic">Статистика</string>
    <string name="shop">Магазин</string>
    <string name="privacy_policy"><a href="https://gamesbars.github.io/Privacy-Policy/">Политика конфиденциальности</a></string>
    <string name="packs">Сложность</string>
    <string name="question">\?</string>
    <string name="percent_top">%d%%</string>
    <string name="percent_bot">%d%%</string>
    <string name="stat_per_aver">Вы отвечали так же, как %s%% игроков</string>
    <string name="stat_count">Сделано выборов</string>
    <string name="stat_time_aver">Среднее время выбора</string>
    <string name="stat_per_min">Уникальнейший выбор</string>
    <string name="stat_per_max">Самый скучный выбор</string>
    <string name="stat_time_max">Самый трудный выбор</string>
    <string name="stat_time_min">Самый лёгкий выбор</string>

    <!-- Для диалоговых окон -->
    <string name="help_dialog_message">place help here</string>
    <string name="help_dialog_title">Важная информация</string>
    <string name="pack_end_dialog_message">Вы дошли до конца набора с вопросами, можете запустить его ещё раз (статистика по нему больше не будет засчитываться) или перейти к следующему, но предупреждаю, там будет жестче.</string>
    <string name="pack_end_dialog_title">Ну что ж</string>
    <string name="dialog_negative">Ок</string>
    <string name="rate_dialog_message">Оцените игру!</string>
    <string name="rate_dialog_like">Нравится!</string>
    <string name="rate_dialog_dislike">Отстой</string>
    <string name="rate_dialog_later">Позже</string>


    <string name="confirm_dialog_title">Купить тему %1$s за %2$d?</string>
    <string name="confirm_dialog_title_pack">Купить %1$s за %2$d?</string>
    <string name="dont_enough_coins_dialog_title">Недостаточно средств.</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>

    <!-- Заглушки для activity_stat -->
    <string name="stat_time_value">%s сек.</string>
    <string name="stat_per_value">%d%%</string>
    <string name="stat_value">21</string>

    <string name="answered_false">Игроков ответили по-другому</string>
    <string name="answered_true">Игроков ответили также</string>

    <string name="themes">Темы</string>
    <string name="theme_cost">200</string>
    <string name="theme_std">Standart</string>
    <string name="theme_black">Black</string>
    <string name="theme_white">White</string>
    <string name="theme_fresh">Fresh</string>

    <string name="skip_lvl_coins">Пропустить уровень за 100 монет</string>
    <string name="skip_lvl_ads">Пропустить уровень за рекламу</string>
    <string name="remove_ads">Отключить рекламу и получить 1000 монет</string>
    <string name="pack_1_title">Сложно</string>
    <string name="pack_2_title">Сложнее</string>
    <string name="pack_hard_title">Невозможно</string>
    <string name="current_lvl">#%1$02d</string>
    <string name="get_coins">Получить 200 монет</string>
</resources>
