<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:shadowColor="?colorSecondaryLighter"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:text="@string/statistic"
            android:textAlignment="center"
            android:textColor="?colorTextTitle"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/stat_per_aver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_selector_standart"
            android:padding="12dp"
            android:text="@string/stat_per_aver"
            android:textAlignment="center"
            android:textColor="?colorTextButton"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/stat_count_item"
                style="@style/StatItemStyle"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp">

                <TextView
                    android:id="@+id/stat_count"
                    style="@style/StatValueStyle"
                    android:text="@string/stat_value" />

                <TextView
                    style="@style/StatTextStyle"
                    android:text="@string/stat_count" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/stat_per_aver_item"
                style="@style/StatItemStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp">

                <TextView
                    android:id="@+id/stat_time_aver"
                    style="@style/StatValueStyle"
                    android:text="@string/stat_time_value" />

                <TextView
                    style="@style/StatTextStyle"
                    android:text="@string/stat_time_aver" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/stat_per_min_item"
                style="@style/StatItemStyle"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp">

                <TextView
                    android:id="@+id/stat_per_min"
                    style="@style/StatValueStyle"
                    android:text="@string/stat_per_value" />

                <TextView
                    style="@style/StatTextStyle"
                    android:text="@string/stat_per_min" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/stat_per_max_item"
                style="@style/StatItemStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp">

                <TextView
                    android:id="@+id/stat_per_max"
                    style="@style/StatValueStyle"
                    android:text="@string/stat_per_value" />

                <TextView
                    style="@style/StatTextStyle"
                    android:text="@string/stat_per_max" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/stat_time_max_item"
                style="@style/StatItemStyle"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp">

                <TextView
                    android:id="@+id/stat_time_max"
                    style="@style/StatValueStyle"
                    android:text="@string/stat_time_value" />

                <TextView
                    style="@style/StatTextStyle"
                    android:text="@string/stat_time_max" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/stat_time_min_item"
                style="@style/StatItemStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp">

                <TextView
                    android:id="@+id/stat_time_min"
                    style="@style/StatValueStyle"
                    android:text="@string/stat_time_value" />

                <TextView
                    style="@style/StatTextStyle"
                    android:text="@string/stat_time_min" />

            </LinearLayout>

        </LinearLayout>

        <!--
        <TextView
            android:id="@+id/stat_count"
            style="@style/StatItemStyle"
            android:text="@string/stat_count" />

        <TextView
            android:id="@+id/stat_time_aver"
            style="@style/StatItemStyle"
            android:text="@string/stat_time_aver" />

        <TextView
            android:id="@+id/stat_per_min"
            style="@style/StatItemStyle"
            android:text="@string/stat_per_min"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/ic_search_black_24dp"/>

        <TextView
            android:id="@+id/stat_per_max"
            style="@style/StatItemStyle"
            android:text="@string/stat_per_max"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/ic_search_black_24dp"/>

        <TextView
            android:id="@+id/stat_time_max"
            style="@style/StatItemStyle"
            android:text="@string/stat_time_max"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/ic_search_black_24dp"/>

        <TextView
            android:id="@+id/stat_time_min"
            style="@style/StatItemStyle"
            android:text="@string/stat_time_min"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/ic_search_black_24dp"/>
        -->

    </LinearLayout>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#0000"
        android:onClick="clickBack"
        android:paddingBottom="6dp"
        android:paddingEnd="6dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:src="@drawable/ic_arrow_back_white_36dp" />

</RelativeLayout>